apps/kdebug/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdebug
  namespace: kdebug
  labels:
    app: kdebug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kdebug
  template:
    metadata:
      labels:
        app: kdebug
    spec:
      containers:
        - name: kdebug
          image: ghcr.io/jory-callan/kdebug:v1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
