apps/kdebug/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kdebug
  namespace: kdebug
spec:
  ingressClassName: nginx
  rules:
    - host: kdebug.czw-sre.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kdebug
                port:
                  number: 80
