apps/kdebug/kdebug.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kdebug
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdebug
  namespace: kdebug
  labels:
    app: kdebug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kdebug
  template:
    metadata:
      labels:
        app: kdebug
    spec:
      containers:
        - name: kdebug
          image: ghcr.io/jory-callan/kdebug:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kdebug
  namespace: kdebug
  labels:
    app: kdebug
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: kdebug
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kdebug
  namespace: kdebug
spec:
  ingressClassName: nginx
  rules:
    - host: kdebug.czw-sre.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kdebug
                port:
                  number: 80
